--- a/beers/static/css/beers.css
+++ b/beers/static/css/beers.css
@@ -1,18 +1,17 @@
-/* line 57, ../../../styles/sass/beers.scss */
+/* line 58, ../../../styles/sass/beers.scss */
 body {
   background-color: ghostwhite;
   color: dimgray;
   margin: 0px;
 }
 
-/* line 65, ../../../styles/sass/beers.scss */
+/* line 66, ../../../styles/sass/beers.scss */
 .top {
   background-color: #FFDB7A;
   height: 24px;
   vertical-align: text-top;
   padding-top: 0.625em;
-  padding-left: 0.3125em;
-  margin-right: 0.3125em;
+  padding-bottom: 0.3125em;
   width: 100%;
   margin: 0em;
   display: flex;
@@ -29,8 +28,14 @@ body {
   margin-left: 0.25em;
   margin-bottom: 0.625em;
 }
+/* line 86, ../../../styles/sass/beers.scss */
+.header-title-box a:link, .header-title-box a:visited, .header-title-box a:active, .header-title-box a:hover {
+  font-weight: bold;
+  text-decoration: none;
+  text-decoration-color: dimgray;
+}
 
-/* line 88, ../../../styles/sass/beers.scss */
+/* line 93, ../../../styles/sass/beers.scss */
 .header-login-box {
   font-family: Helvetica, sans-serif;
   font-size: 1rem;
@@ -41,65 +46,70 @@ body {
   border-left-color: #EFD181;
   padding-right: 0.625em;
 }
+/* line 102, ../../../styles/sass/beers.scss */
+.header-login-box a:link, .header-login-box a:visited, .header-login-box a:active, .header-login-box a:hover {
+  text-decoration: none;
+  text-decoration-color: dimgray;
+}
 
-/* line 99, ../../../styles/sass/beers.scss */
+/* line 108, ../../../styles/sass/beers.scss */
 #topimage {
   width: 100%;
 }
 
-/* line 103, ../../../styles/sass/beers.scss */
+/* line 112, ../../../styles/sass/beers.scss */
 .content {
   font-family: Helvetica, sans-serif;
   margin-left: 0.5em;
   width: 100%;
 }
-/* line 108, ../../../styles/sass/beers.scss */
+/* line 117, ../../../styles/sass/beers.scss */
 .content h1 {
   font-size: 2.5rem;
   color: #5c5c5c;
 }
-/* line 114, ../../../styles/sass/beers.scss */
+/* line 123, ../../../styles/sass/beers.scss */
 .content h2 {
   font-size: 2rem;
   color: #767676;
 }
 
-/* line 122, ../../../styles/sass/beers.scss */
+/* line 131, ../../../styles/sass/beers.scss */
 #pstmt {
   font-size: 0.5em;
 }
 
-/* line 127, ../../../styles/sass/beers.scss */
+/* line 136, ../../../styles/sass/beers.scss */
 .core-table table, .player-beers table, .contest-summary-list table, .contest-leaderboard table {
   background-color: white;
   width: 100%;
 }
-/* line 130, ../../../styles/sass/beers.scss */
+/* line 139, ../../../styles/sass/beers.scss */
 .core-table table th, .player-beers table th, .contest-summary-list table th, .contest-leaderboard table th {
   height: 1.5em;
   font-size: 1rem;
   background-color: white;
 }
-/* line 135, ../../../styles/sass/beers.scss */
+/* line 144, ../../../styles/sass/beers.scss */
 .core-table table tr, .player-beers table tr, .contest-summary-list table tr, .contest-leaderboard table tr {
   height: 1.25em;
   font-size: 0.9rem;
 }
-/* line 139, ../../../styles/sass/beers.scss */
+/* line 148, ../../../styles/sass/beers.scss */
 .core-table table td, .player-beers table td, .contest-summary-list table td, .contest-leaderboard table td {
   background-color: #dfc8b9;
   padding: 0;
   margin: 0;
 }
 
-/* line 147, ../../../styles/sass/beers.scss */
+/* line 156, ../../../styles/sass/beers.scss */
 .player-beers {
   width: 80%;
   margin-left: 3em;
   margin-top: 0.5em;
 }
 
-/* line 154, ../../../styles/sass/beers.scss */
+/* line 163, ../../../styles/sass/beers.scss */
 .contest-summary-list {
   float: right;
   vertical-align: text-top;
@@ -108,14 +118,14 @@ body {
   margin: 0.25em;
 }
 
-/* line 163, ../../../styles/sass/beers.scss */
+/* line 172, ../../../styles/sass/beers.scss */
 .contest-leaderboard {
   width: 80%;
   margin-left: 3em;
   margin-top: 0.5em;
 }
 
-/* line 170, ../../../styles/sass/beers.scss */
+/* line 179, ../../../styles/sass/beers.scss */
 .three-column-box {
   display: flex;
   width: 100%;
@@ -125,7 +135,7 @@ body {
   margin-top: 2em;
 }
 
-/* line 179, ../../../styles/sass/beers.scss */
+/* line 188, ../../../styles/sass/beers.scss */
 .column-box {
   width: 25%;
   margin-left: 0.5em;
@@ -133,7 +143,7 @@ body {
   text-align: center;
 }
 
-/* line 186, ../../../styles/sass/beers.scss */
+/* line 195, ../../../styles/sass/beers.scss */
 img.column-icon {
   display: block;
   width: 50%;
@@ -142,7 +152,7 @@ img.column-icon {
   margin-right: auto;
 }
 
-/* line 194, ../../../styles/sass/beers.scss */
+/* line 203, ../../../styles/sass/beers.scss */
 .login-box {
   width: 34.125em;
   display: block;
@@ -150,7 +160,7 @@ img.column-icon {
   margin-right: auto;
 }
 
-/* line 203, ../../../styles/sass/beers.scss */
+/* line 212, ../../../styles/sass/beers.scss */
 .login-form {
   display: flex;
   flex-direction: column;
@@ -163,13 +173,13 @@ img.column-icon {
   padding: 1em;
 }
 
-/* line 215, ../../../styles/sass/beers.scss */
+/* line 224, ../../../styles/sass/beers.scss */
 .login-field {
   width: 30em;
   float: left;
   padding-bottom: 0.75em;
 }
-/* line 219, ../../../styles/sass/beers.scss */
+/* line 228, ../../../styles/sass/beers.scss */
 .login-field input {
   font-size: 1.25em;
   width: 23.8em;
@@ -178,18 +188,18 @@ img.column-icon {
   height: 1.5em;
 }
 
-/* line 228, ../../../styles/sass/beers.scss */
+/* line 237, ../../../styles/sass/beers.scss */
 .login-button-row {
   width: 100%;
   padding-bottom: 0.75em;
 }
-/* line 232, ../../../styles/sass/beers.scss */
+/* line 241, ../../../styles/sass/beers.scss */
 .login-button-row input[type=submit] {
   font-size: 1.25em;
   float: right;
 }
 
-/* line 238, ../../../styles/sass/beers.scss */
+/* line 247, ../../../styles/sass/beers.scss */
 .login-label {
   font-size: 1em;
   height: 1em;
