--- a/beers/templates/base/base.html
+++ b/beers/templates/base/base.html
@@ -8,7 +8,14 @@
 	<body>
 		<div class="top">
 			<div class="header-title-box"><a href="{% url 'index' %}">One Hundred Beers</a></div>
-			<div class="header-login-box"><a href="{% url 'login' %}">Login</a></div>
+			<div class="header-login-box">
+				{% if request.user.is_authenticated %}
+					Welcome, {{ request.user.username }}
+					<a style="font-size: 0.75rem; text-decoration: underline;" href="{% url 'logout' %}">(Logout)</a>
+				{% else %}
+					<a href="{% url 'login' %}">Login</a>
+				{% endif %}
+			</div>
 		</div>
 		<div class="top-image">
 			{% block banner_image %}
