--- a/styles/sass/beers.scss
+++ b/styles/sass/beers.scss
@@ -147,8 +147,8 @@ $top-padding-horizontal:  5px / $default-font-size * 1em;
     }
     td {
       background-color: lighten($color-secondary-2-2, 25%);
-      padding: 0;
-      margin: 0;
+      padding: 0.5em;
+      margin: 0.5em;
     }
   }
 }
@@ -167,6 +167,13 @@ $top-padding-horizontal:  5px / $default-font-size * 1em;
   width: 40%;
   background-color: $color-secondary-2-2;
   margin: 0.25em;
+}
+
+.contests {
+  @extend .core-table;
+  width: 80%;
+  margin-left: 6em;
+  margin-top: 2em;
 }
 
 .contest-leaderboard {
