--- a/beers/templates/registration/signup_success.html
+++ b/beers/templates/registration/signup_success.html
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block content %}
-  Success! Now go back and <a href="{% url 'login' %}">Login</a>
+  Success! Now go back and <a href="{% url 'login' %}">Login</a> and sign up
+  for contests!
 {% endblock %}
