--- a/beers/templates/base/base.html
+++ b/beers/templates/base/base.html
@@ -13,7 +13,7 @@
 					Welcome, {{ request.user.username }}
 					<a style="font-size: 0.75rem; text-decoration: underline;" href="{% url 'logout' %}">(Logout)</a>
 				{% else %}
-					<a href="{% url 'login' %}">Login</a>
+					<a href="{% url 'signup' %}">Signup</a> or <a href="{% url 'login' %}">Login</a>
 				{% endif %}
 			</div>
 		</div>
