--- a/hundred_beers/static/css/beers.css
+++ b/hundred_beers/static/css/beers.css
@@ -209,9 +209,19 @@ img.column-icon {
 /* line 254, ../../../styles/sass/beers.scss */
 .login-label {
   font-size: 1em;
+  font-weight: bold;
   height: 1em;
   width: 80%;
   text-align: left;
   float: left;
-  padding-bottom: 0.25em;
+  margin-bottom: 0.25em;
+}
+
+/* line 264, ../../../styles/sass/beers.scss */
+.field-help {
+  font-size: 0.75rem;
+  height: 0.8rem;
+  text-align: left;
+  float: left;
+  margin-bottom: 0.25rem;
 }
