--- a/styles/sass/beers.scss
+++ b/styles/sass/beers.scss
@@ -183,6 +183,13 @@ $top-padding-horizontal:  5px / $default-font-size * 1em;
   margin-top: 0.5em;
 }
 
+.contest-beerlist {
+  @extend .core-table;
+  width: 80%;
+  margin-left: 3em;
+  margin-top: 0.5em;
+}
+
 .three-column-box {
   display: flex;
   width: 100%;
@@ -196,7 +203,28 @@ $top-padding-horizontal:  5px / $default-font-size * 1em;
   width: 25%;
   margin-left: 0.5em;
   margin-right: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   text-align: center;
+  height: 100%;
+
+  .column-box-content {
+    height: 80%;
+  }
+
+  .column-box-link {
+    text-align: right;
+    font-size: 0.8em;
+    width: 100%;
+    vertical-align: text-bottom;
+  }
+}
+
+.outset-column-box {
+  @extend .column-box;
+  background-color: lightgrey;
+  box-shadow: 0.3em 0.3em 0.1em darkgrey;
+  padding-bottom: 1em;
 }
 
 img.column-icon {
