Updated to include footer

--- a/beers/templates/base/base.html
+++ b/beers/templates/base/base.html
@@ -26,6 +26,10 @@
 			{% block content %}
 				Content
 			{% endblock %}
+			<div style="clear: both;">&nbsp;</div>
+		</div>
+		<div class="footer">
+			Copyright: Eileen Graham and Navin Vembar
 		</div>
 	</body>
 </html>
