--- a/beers/templates/beers/index.html
+++ b/beers/templates/beers/index.html
@@ -41,7 +41,7 @@
 				will be more later.)
 			</div>
 			<div class="column-box-link">
-				<a href="{% url 'contests' %}">See the lists&gt;</a>
+				<a href="{% url 'contests' %}">See the contests&gt;</a>
 			</div>
 		</div>
 		<div class="outset-column-box">
