Styling and cleanup

--- a/beers/templates/beers/contest-beers.html
+++ b/beers/templates/beers/contest-beers.html
@@ -2,7 +2,7 @@
 {% block title %}{{ contest.name }} - Beers{% endblock %}
 
 {% block content %}
-<h2>Beer List</h2>
+<h2>What We're Drinking</h2>
 
 <div class="contest-beerlist">
   <table>
