--- a/styles/sass/beers.scss
+++ b/styles/sass/beers.scss
@@ -109,6 +109,7 @@ $top-padding-horizontal:  5px / $default-font-size * 1em;
   height: 2em;
   color: lightgrey;
   background-color: darkgrey;
+  padding-left: 0.25rem;
   padding-top: 10px / $default-font-size * 1em;
   padding-bottom: 5px / $default-font-size * 1em;
   margin: 0em;
